--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <form id="bucketlist-form" action="index.html" method="post">
+      <label for="activity">Activity</label>
+      <input type="text" name="activity" id="activity" value="" required>
+
+      <label for="location">Location</label>
+      <input type="text" name="location" id="location" value="" required>
+
+      <input type="submit" name="submit" id="submit" value="Save Item">
+    </form>
+
     <section id="list-container"></section>
   </body>
 </html>
